# fpga-mandelbrot-accelerator

./: Cargo.toml  README.md
bench/: check-logic.py
bench/rust-bench/: Cargo.toml  plot-result.py
bench/rust-bench/src/: main.rs
de10-nano/: DE10_NANO_SoC_GHRD.qsf  DE10_NANO_SoC_GHRD.v  DE10_NANO_SoC_GHRD_assignment_defaults.qdf  mand_cluster_avalon_mm_hw.tcl  mand_cluster_avalon_mm_hw.tcl~  soc_system.qsys  soc_system.sopcinfo
de10-nano/hps_isw_handoff/soc_system_hps_0/: id
de10-nano/soc_system/: soc_system.bsf  soc_system.csv  soc_system.html  soc_system.spd  soc_system.xml
de10-nano/soc_system/simulation/: soc_system.sip  soc_system.v
de10-nano/soc_system/simulation/aldec/: rivierapro_setup.tcl
de10-nano/soc_system/simulation/mentor/: msim_setup.tcl
de10-nano/soc_system/simulation/submodules/: alt_mem_if_common_ddr_mem_model_ddr3_mem_if_dm_pins_en_mem_if_dqsn_en.sv  altera_avalon_mm_bridge.v  hps_sdram.v  (+60 more)
de10-nano/soc_system/synthesis/: soc_system.debuginfo  soc_system.qip  soc_system.vhd
fpga-mand-linux-driver/: Cargo.toml
fpga-mand-tcp-proxy/: Cargo.toml
fpga-mond-linux-driver/: Cargo.toml
fpga-mond-tcp-proxy/: Cargo.toml
ip/mand_avalon_cluster_avalon_mm/: mand_cluster_avalon_mm.vhd
libs/mand/pkg/: functions.vhd
mand-cluster-http-proxy/: Cargo.toml  build-upload.sh
mand-cluster-http-proxy/src/: cluster_scheduler.rs  lib.rs  main.rs  mand_cluster.rs
mand-cluster-http-proxy/src/mand_cluster/: mod.rs
presentation/: course-work-presentation.html  course-work-presentation.md  project-structure.drawio
test/: print-meta-data.c
(+39 files in other folders)
