[package]
name = "mand-cluster-http-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4" }
tokio = { version = "1.38", features = ["full"] }
libc = { version = "0.2" }
anyhow = { version = "1", features = ["std"] }
